fix: Align the language button correctly on mobile view (#63)

--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -323,6 +323,7 @@
   }
 
   .btn-back,
+  .btn-lang,
   .btn-print,
   .btn-download {
     width: 100%;
